# kitchenmate

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  render.yaml
apps/kitchen_mate/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/kitchen_mate/alembic/: env.py
apps/kitchen_mate/alembic/versions/: a1b2c3d4e5f6_add_file_keys_to_user_recipes.py  b1c2d3e4f5a6_add_users_table.py  c2d3e4f5a6b7_add_recipe_shares_table.py  d3e4f5a6b7c8_add_kitchen_tables.py  ede6c69f37ad_initial_schema_with_recipes_and_user_.py
apps/kitchen_mate/frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/kitchen_mate/frontend/src/: App.tsx  index.css  vite-env.d.ts
apps/kitchen_mate/frontend/src/api/: clip.ts  kitchens.ts  recipes.ts  sharing.ts
apps/kitchen_mate/frontend/src/components/: AddFromUploadPage.tsx  AddFromUrlPage.tsx  AddManualPage.tsx  AddRecipeDropdown.tsx  AuthForm.tsx  AuthModal.tsx  ClipRecipePage.tsx  CookMode.tsx  ErrorMessage.tsx  ExportDropdown.tsx  FileDropZone.tsx  Header.tsx  KitchenDetailPage.tsx  KitchenRecipeDetailPage.tsx  KitchenRecipeListItem.tsx  KitchensDropdown.tsx  KitchensPage.tsx  LoadingSpinner.tsx  (+12 more)
apps/kitchen_mate/src/kitchen_mate/: __init__.py  auth.py  config.py  db.py  extraction.py  files.py  main.py  schemas.py
apps/kitchen_mate/tests/: __init__.py  conftest.py  test_auth.py  test_authorization.py  test_clip.py  test_config.py  test_convert.py  test_files.py  test_kitchens.py  test_user_recipes.py
(+39 files in other folders)
