[project]
name = "kitchen-mate"
version = "0.1.0"
description = "Web application for managing a home kitchen"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kitchen Mate Contributors" }
]

dependencies = [
    "recipe-clipper[llm-anthropic]",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
kitchen-mate = "kitchen_mate.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
recipe-clipper = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/kitchen_mate"]
